# invasion-Ne-extras

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
ldbucket/: Cargo.toml
ldbucket/src/: main.rs
notebooks/: 0-processing-data.ipynb  01-constant-Ne-Copy1.ipynb  01-constant-Ne.ipynb  02-exponential-constant-Ne.ipynb
src/: constant_population.py  exponential_constant_population.py  ldbucket_tskit.py  sampling_wrapper.py
